--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
      <div class="row">
       <div class="col-lg-10 mx-auto text-center">
         <hr class="small">
-        <p class="text-muted">v1.1 - &copy; Luc Frébourg - <span class="yearCopy"></span></p>
+        <p class="text-muted">v1.1 - &copy; M. Frébourg - <span class="yearCopy"></span></p>
       </div>
     </div>
   </div>
